syntax = "proto3";
package nom.nci;

option java_multiple_files = true;
option java_package = "ds.service3";
option java_outer_classname = "Service3Impl";

// Service3 TemperatureControlService
service TemperatureControlService {
    rpc getCurrentTemp(TempRequest) returns (TempResponse);
    rpc setTemp(TempRequest) returns (TempResponse);
}

// Messages for TemperatureControlService
message TempRequest {
    double temperature = 1;
}

message TempResponse {
    double currentTemp = 1;
}